solved homescreen y overflow

--- a/laab/src/contact copy.css
+++ b/laab/src/contact copy.css
@@ -2,13 +2,11 @@
   display: flex;
   flex-wrap: wrap;
   font-family: 'Roboto', sans-serif;
-  width: 100%;
+  width: 110%;
   background-color: #cad1df;
   position: absolute;
   min-height: 100vh;
-  left: 0;
-  top: 5300px;
-
+  left: -58px;
 }
 
 .contact-left {
@@ -143,7 +141,7 @@
     position: absolute;
     overflow: hidden;
     max-height: 100vh; 
-    margin-top: 28rem;
+    /*margin-top: 28rem;*/
     
   }
 
@@ -164,7 +162,7 @@
 }
 
 /* Ipad mini  */
-@media (max-width: 769px) {
+/*@media (max-width: 769px) {
   .contact-container {
     min-height: auto;
     width: 800px;
@@ -190,18 +188,12 @@
     position: static;
   }
 
-}
+}*/
 
 @media (max-width: 500px) {
 
   .contact-container {
-    position: relative;
-    width: 100%;
-    height: 120%;
-    padding: 0;
-    margin-top: 400px;
-    z-index: 10000;
-    background: #11447f;;
+    opacity: 0;
   }
 
   .contact-left {
@@ -209,10 +201,11 @@
     margin-top: 0px;
     top: 0;
     left: 0;
-    width: 0%;
-    height: 0%;
-    padding: 0rem;
-    color: #fff;
+    width: 100%;
+    height: 500px;
+    padding: 1rem;
+    background: #11447f;
+    color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -222,11 +215,11 @@
 
   .contact-right {
     position: absolute;
-    margin-top: 150px;
+   /* margin-top: 400px;*/
     top: 100px;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 1500px;
     padding-top: 120px; 
     padding: 1rem;
     background-color: #D0EBFF;
@@ -234,18 +227,15 @@
     flex-direction: column;
     justify-content: flex-start;
     box-sizing: border-box;
-    z-index: 100000;
+    z-index: 10000;
   }
 
   #contact-title,
   #contact-txt {
-    text-align: left;
-    font-size: 12px;
+    text-align: center;
+    margin-bottom: 0.5rem;
+    font-size: 1rem;
     width: 100%;
-    color: white;
-    z-index: 10000;
-    padding: 20px;
-    margin-top: 100px;
   }
 
   .contact-form {
@@ -269,9 +259,9 @@
     padding: 0.6rem;
     font-size: 0.95rem;
     border-radius: 2rem;
-    border: 1px solid #1D6EFC;
-    background-color: #fff;
-    color: #1D6EFC;
+    border: none;
+    background-color: #00bcd4;
+    color: white;
     cursor: pointer;
     margin-top: 0.5rem;
   }
