--- a/laab/src/index.css
+++ b/laab/src/index.css
@@ -7,6 +7,7 @@ html, body {
   padding: 0;
   font-family: sans-serif;
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 .content {
@@ -398,6 +399,7 @@ html, body {
 #contact-us {
     margin-bottom: 0 !important;
     padding-bottom: 0 !important;
+    
   }
 
   * {
